# blog-posting-platform

./: README.md  db.sqlite3  main.py  pyproject.toml  requirements.txt
Accounts/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
Accounts/migrations/: 0001_initial.py
blogApp/: asgi.py  settings.py  urls.py  wsgi.py
datas/: model.ipynb
datas/.ipynb_checkpoints/: model-checkpoint.ipynb
modelFile/: dataframe_merge.csv  model.ipynb
modelFile/.ipynb_checkpoints/: model-checkpoint.ipynb
myblog/: admin.py  forms.py  models.py  urls.py  views.py  weather.py
myblog/migrations/: 0001_initial.py  0002_alter_blogmodel_options.py  0003_postcomments.py  0004_blogmodel_accuracy.py  0005_alter_blogmodel_accuracy.py  0006_blogmodel_gender_alter_blogmodel_accuracy.py  0007_remove_blogmodel_gender_blogmodel_category.py  0008_city.py  0009_delete_city.py
templates/Accounts/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  signup.html  usersProfile.html
templates/baseFiles/: base.html  footer.html  nav.html
templates/blogs/: delete_post.html  edit_post.html  index.html  post_category_health.html  post_category_politics.html  post_category_sport.html  post_category_weather.html  post_details.html  search.html  weather.html
