[project]
name = "blog-posting-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.8.1",
    "certifi==2024.2.2",
    "charset-normalizer==3.3.2",
    "crispy-bootstrap5==2024.2",
    "django==5.0.6",
    "django-crispy-forms==2.1",
    "idna==3.7",
    "pillow>=12.1.0",
    "pytz==2024.1",
    "requests==2.32.3",
    "sqlparse==0.5.0",
    "tzdata==2024.1",
    "urllib3==2.2.1",
]
